# intellexa-api

./: main.py  pyproject.toml
.github/workflows/: Initialize_db.yml
src/: main.py
src/api/: health.py  main.py  server.py
src/intellexa_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
