[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intellexa-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.68",
    "intellexa-core @ git+https://github.com/Intellexa-cognivault/intellexa-core@main",
    "fastapi>=0.95",
    "uvicorn>=0.15"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

